WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
249243
Crash loading bing.com with INTERACTION_REGIONS_IN_EVENT_REGION enabled
https://bugs.webkit.org/show_bug.cgi?id=249243
Summary
Crash loading bing.com with INTERACTION_REGIONS_IN_EVENT_REGION enabled
Tim Horton
Reported
2022-12-13 12:31:50 PST
Crash loading bing.com with INTERACTION_REGIONS_IN_EVENT_REGION enabled
Attachments
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2022-12-13 12:32:02 PST
<
rdar://problem/103312380
>
Tim Horton
Comment 2
2022-12-13 12:35:28 PST
Pull request:
https://github.com/WebKit/WebKit/pull/7562
EWS
Comment 3
2022-12-13 12:45:52 PST
Committed
257810@main
(83a027d4ed50): <
https://commits.webkit.org/257810@main
> Reviewed commits have been landed. Closing PR #7562 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug