Crash loading bing.com with INTERACTION_REGIONS_IN_EVENT_REGION enabled https://bugs.webkit.org/show_bug.cgi?id=249243 rdar://103312380

Reviewed by Megan Gardner.

* Source/WebCore/dom/Document.cpp:
(WebCore::Document::didAddOrRemoveMouseEventHandler):

Canonical link: https://commits.webkit.org/257810@main